# mim3-dashboard

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/: copilot-instructions.md
.streamlit/: config.toml  secret.toml
src/sales_dashboard/: __init__.py  _version.py  home.py  log_setup.py
src/sales_dashboard/config/: constant.py  messages.py
src/sales_dashboard/core/: app_bootstrap.py  auth_helper.py  page_registry.py  session_management.py  streamlit_session_manager.py
src/sales_dashboard/domain/models/: user.py
src/sales_dashboard/domain/repository/: user_repository.py
src/sales_dashboard/domain/schemas/: user.py
src/sales_dashboard/infrastructure/: __init__.py  db_engine.py  db_entities.py  init_data.py
src/sales_dashboard/infrastructure/repositories/: user_repository.py
src/sales_dashboard/models/: __init__.py  user_operations.py
src/sales_dashboard/services/: app_initialization_service.py  app_metadata_service.py  app_service.py  auth_service.py  health_service.py  system_bootstrap_service.py
src/sales_dashboard/services/core/: auth_service.py  session_service.py  user_service.py
src/sales_dashboard/services/interfaces/: __init__.py
src/sales_dashboard/services/system/: bootsrap_service.py  environment_service.py  health_service.py  metadata_service.py
src/sales_dashboard/shared/: auth.py
src/sales_dashboard/ui/: __init__.py  admin_health.py  auth.py  dashboard.py  login.py  ui_config.py
src/sales_dashboard/ui/components/: __init__.py  navigation_sidebar.py  user_info_sidebar.py
src/sales_dashboard/ui/pages/: __init__.py  pg_authentication.py  pg_dashboard.py  pg_hpp_calculator.py  pg_profile.py  profile.py
src/sales_dashboard/ui/pages/admin/: pg_sys_settings.py  pg_users_management.py
src/sales_dashboard/utils/: __init__.py  hasher.py  log_setup.py
