[project]
name = "sales-dashboard"
dynamic = ["version"]
description = "Dashboard Penjualan dan Monitoring Mitra IM3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "bcrypt>=4.3.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pydantic[email]>=2.11.5",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
]

[project.urls]
repository = "https://github.com/coffeeisoxygen/mim3-dashboard"

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sales_dashboard"]
package-dir = { "" = "src" }

[tool.setuptools_scm]
write_to = "src/sales_dashboard/_version.py"

[project.scripts]
sales-dashboard = "sales_dashboard.home:main"
